Fixed Contact Name header on tablet breakpoint

--- a/src/components/WarehouseListRow/WarehouseListRow.scss
+++ b/src/components/WarehouseListRow/WarehouseListRow.scss
@@ -118,12 +118,12 @@
   .warehouse__cell {
     &:nth-of-type(1) {
       order: 1;
-      width: 18%;
+      width: 16%;
     }
 
     &:nth-of-type(2) {
       order: 3;
-      width: 15%;
+      width: 17%;
     }
 
     &:nth-of-type(3) {
